[package]
name = "fedex-base64-decoder"
version = "1.0.0"
description = "Decode base64 strings from FedEx ship API"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = { version = "2.0", features = [] }
tauri-plugin-fs = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
chrono = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]

